[package]
name = "wyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
ctrlc = "3.2.3"
futures-channel = "0.3.24"
futures-util = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = "0.17.2"
url = "2.3.1"
